fix: [PD-475] MSite ui alignment changes

--- a/src/component/HeaderLogo/HeaderLogo.style.scss
+++ b/src/component/HeaderLogo/HeaderLogo.style.scss
@@ -16,7 +16,9 @@
     height: auto;
     // background-color: #ffffff;
     .LazyLoad-wrapper {
-      height: auto;
+      @include desktop {
+        height: auto;
+      }
       img {
         &_isArabic {
           width: 80% !important;
