--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -480,8 +480,13 @@ div.SearchOverlay.Overlay {
     }
 
     &-Recommended {
-        width: 283px;
-        margin-left : 0px;
+
+        @include desktop {
+            width: 283px;
+            margin-left : 0px;
+            font-size: 14px;
+            margin-top: 0px;
+        }
         
         h2 {
             font: normal normal 600 14px/19px 'Avenir Next', sans-serif;
@@ -490,8 +495,6 @@ div.SearchOverlay.Overlay {
             margin-top: 0px;
             letter-spacing: 1.56px;
         }
-        font-size: 14px;
-        margin-top: 0px;
         &_isArabic {
             margin-left: 0px;
         }
@@ -520,6 +523,13 @@ div.SearchOverlay.Overlay {
             flex-direction: column;
             justify-content: space-between;
 
+            @include mobile {
+                display: flex;
+                flex-direction: row;
+                width: 1011px;
+                overflow: scroll;
+            }
+
             &::-webkit-scrollbar {
                 width: 1px;
             }
@@ -531,8 +541,10 @@ div.SearchOverlay.Overlay {
 
                 margin-bottom: -20px;
 
-                &:first-child {
-                    margin-top: 0px !important;
+                @include desktop {
+                    &:first-child {
+                        margin-top: 0px !important;
+                    }
                 }
 
                 padding-left: 0px;
